CSS|FIX adjust image position after cropper
- wrap img with another div, w/ `position: relative; width: 100%;`

--- a/bookshot/static/css/style.css
+++ b/bookshot/static/css/style.css
@@ -103,12 +103,21 @@ nav#nav {
 		width: 100%;
 		height: 100%;
 	}
+	.image-preview-container-inner .file-drop-box {
+		margin-left: -4px;
+		margin-top: -4px; /* reverse padding */
+	}
+
+	label.file-drop-box {
+		margin-bottom: 0;
+	}
+
 	.file-drop-box .guide {
 		position: absolute;
 		height: calc(100% - 20px);
 		width: calc(100% - 20px);
-		top: 6px;
-		left: 6px;
+		top : 10px;
+		left: 10px;
 
 		text-align: center;
 		border: 2px dashed rgba(0,0,0,0.3);
@@ -183,6 +192,7 @@ nav#nav {
 
 	.image-preview-container .thumbnail {
 		position: relative;
+		width: 100%;
 
 		margin-bottom: 0;
 		padding: 0;
@@ -191,6 +201,20 @@ nav#nav {
 		border: none;
 		box-shadow: none;
 	}
+
+	.image-preview-container .thumbnail .image-wrapper {
+		position: relative;
+		width: 100%;
+	}
+
+				/*
+				.image-preview-container-inner {
+					padding: 0;
+				}
+				.image-preview-container-inner .thumbnail {
+					padding: 4px;
+				}
+				*/
 
 
 .photo-form-control.form-control {
